Add grey background to All side filter button when not active

--- a/mobile.html
+++ b/mobile.html
@@ -161,6 +161,19 @@
             border: 2px solid #e0e0e0;
         }
 
+        /* Side filter All button */
+        .filter-button[data-side="all"] {
+            background: #9E9E9E;
+            color: white;
+            border: 2px solid #e0e0e0;
+        }
+
+        .filter-button[data-side="all"].active {
+            background: #9C27B0 !important;
+            color: white !important;
+            border: 2px solid #e0e0e0 !important;
+        }
+
         /* Override the general active state for side buttons */
         .filter-button.button-white.active,
         .filter-button.button-black.active {
