--- a/index.html
+++ b/index.html
@@ -412,8 +412,12 @@
         }
 
         .eval-drop {
-            color: #666;
+            color: #000;
             font-weight: bold;
+        }
+
+        .eval-drop span {
+            color: inherit;
         }
 
         .eval-drop.best {
@@ -1375,7 +1379,7 @@
                                     <span class="eval-before">${(parseFloat(move.Original_Eval_After) || 0).toFixed(2)}</span>
                                     <span class="eval-arrow">→</span>
                                     <span class="eval-after">${(parseFloat(move.Original_Eval_Before) || 0).toFixed(2)}</span>
-                                    <span class="eval-drop" style="color: #000;">(<span class="${getQualityClass(Math.abs(parseFloat(move.Original_Eval_After - move.Original_Eval_Before) || 0))}">${Math.abs(parseFloat(move.Original_Eval_After - move.Original_Eval_Before) || 0).toFixed(2)}</span>)</span>
+                                    <span class="eval-drop">(<span class="${getQualityClass(Math.abs(parseFloat(move.Original_Eval_After - move.Original_Eval_Before) || 0))}">${Math.abs(parseFloat(move.Original_Eval_After - move.Original_Eval_Before) || 0).toFixed(2)}</span>)</span>
                                 </div>
                             </div>
                         </div>
