--- a/mobile.html
+++ b/mobile.html
@@ -429,6 +429,10 @@
             font-weight: bold;
         }
 
+        .eval-drop span {
+            color: inherit;
+        }
+
         .eval-drop.best {
             color: #2196F3; /* Blue for Best */
         }
@@ -1163,7 +1167,7 @@
                                     <span class="eval-before">${(parseFloat(move.Original_Eval_After) || 0).toFixed(2)}</span>
                                     <span class="eval-arrow">→</span>
                                     <span class="eval-after">${(parseFloat(move.Original_Eval_Before) || 0).toFixed(2)}</span>
-                                    <span class="eval-drop" style="color: #000;">(<span class="${getQualityClass(Math.abs(parseFloat(move.Original_Eval_Drop) || 0))}">${Math.abs(parseFloat(move.Original_Eval_Drop) || 0).toFixed(2)}</span>)</span>
+                                    <span class="eval-drop">(<span class="${getQualityClass(Math.abs(parseFloat(move.Original_Eval_Drop) || 0))}">${Math.abs(parseFloat(move.Original_Eval_Drop) || 0).toFixed(2)}</span>)</span>
                                 </div>
                             </div>
                         </div>
