Add specific CSS rules for inner spans with quality classes

--- a/index.html
+++ b/index.html
@@ -447,6 +447,31 @@
             color: #F44336; /* Red for Blunder */
         }
 
+        /* Specific rules for inner spans with quality classes */
+        .eval-drop span.best {
+            color: #2196F3 !important; /* Blue for Best */
+        }
+
+        .eval-drop span.excellent {
+            color: #4CAF50 !important; /* Green for Excellent */
+        }
+
+        .eval-drop span.good {
+            color: #8BC34A !important; /* Light Green for Good */
+        }
+
+        .eval-drop span.inaccuracy {
+            color: #FFC107 !important; /* Yellow for Inaccuracy */
+        }
+
+        .eval-drop span.mistake {
+            color: #FF9800 !important; /* Orange for Mistake */
+        }
+
+        .eval-drop span.blunder {
+            color: #F44336 !important; /* Red for Blunder */
+        }
+
 
 
         .move-number {
